syntax = "proto3";

package elastic.apm.v1;

option go_package = "/modelpb";

message DataStream {
  string type = 1;
  string dataset = 2;
  string namespace = 3;
}
